--- a/authentication/src/main/resources/boot.conf
+++ b/authentication/src/main/resources/boot.conf
@@ -7,9 +7,19 @@ boot {
     port = ${?HTTP_PORT}
   }
 
-  shelter {
-    default_limit = 5
-    default_limit = ${?DEFAULT_LIMIT}
+  session {
+    secret = "pass"
+    secret = ${?SESSION_SECRET}
+
+    set_auth_header_name = "Set-Authorization"
+    set_auth_header_name = ${?SET_AUTH_HEADER_NAME}
+
+    auth_header_name = "Authorization"
+    auth_header_name = ${?AUTH_HEADER_NAME}
+
+    // seconds
+    expiration_date = 1 d
+    expiration_date = ${?EXPIRATION_DATE}
   }
 
 }
