Major update: sns cooperation

--- a/sample/src/main/resources/application.conf
+++ b/sample/src/main/resources/application.conf
@@ -1,4 +1,5 @@
 include classpath("boot.conf")
 include classpath("session.conf")
+include classpath("oauth2.conf")
 include classpath("mysql.conf")
 include classpath("redis.conf")
