add sns session

--- a/sample/src/main/resources/session.conf
+++ b/sample/src/main/resources/session.conf
@@ -9,6 +9,6 @@ session {
     auth_header_name = ${?AUTH_HEADER_NAME}
 
     // seconds
-    expiration_date = 1 d
+    expiration_date = 5 m
     expiration_date = ${?EXPIRATION_DATE}
   }
