--- a/sample/src/main/resources/redis.conf
+++ b/sample/src/main/resources/redis.conf
@@ -1,16 +1,29 @@
 redis {
 
-  db {
+  session {
     host = "redis"
-    host = ${?REDIS_HOST}
+    host = ${?REDIS_HOST_SESSION}
     port = 6379
-    port = ${?REDIS_PORT}
+    port = ${?REDIS_PORT_SESSION}
     password = ""
-    password = ${?REDIS_PASSWORD}
+    password = ${?REDIS_PASSWORD_SESSION}
     db = 1
-    db = ${?REDIS_DB}
+    db = ${?REDIS_DB_SESSION}
     connect-timeout = 240 s
-    connect-timeout = ${?REDIS_CONNECT_TIMEOUT}
+    connect-timeout = ${?REDIS_CONNECT_TIMEOUT_SESSION}
   }
+
+  oauth2 {
+      host = "redis"
+      host = ${?REDIS_HOST_OAUTH2}
+      port = 6379
+      port = ${?REDIS_PORT_OAUTH2}
+      password = ""
+      password = ${?REDIS_PASSWORD_OAUTH2}
+      db = 2
+      db = ${?REDIS_DB_OAUTH2}
+      connect-timeout = 240 s
+      connect-timeout = ${?REDIS_CONNECT_TIMEOUT_OAUTH2}
+    }
 
 }
