メールによるアカウント有効化とパス初期化

--- a/sample/src/main/resources/redis.conf
+++ b/sample/src/main/resources/redis.conf
@@ -13,6 +13,19 @@ redis {
     connect-timeout = ${?REDIS_CONNECT_TIMEOUT_SESSION}
   }
 
+  mail {
+        host = "redis"
+        host = ${?REDIS_HOST_OAUTH2}
+        port = 6379
+        port = ${?REDIS_PORT_OAUTH2}
+        password = ""
+        password = ${?REDIS_PASSWORD_OAUTH2}
+        db = 2
+        db = ${?REDIS_DB_OAUTH2}
+        connect-timeout = 240 s
+        connect-timeout = ${?REDIS_CONNECT_TIMEOUT_OAUTH2}
+      }
+
   oauth2 {
       host = "redis"
       host = ${?REDIS_HOST_OAUTH2}
@@ -20,7 +33,7 @@ redis {
       port = ${?REDIS_PORT_OAUTH2}
       password = ""
       password = ${?REDIS_PASSWORD_OAUTH2}
-      db = 2
+      db = 3
       db = ${?REDIS_DB_OAUTH2}
       connect-timeout = 240 s
       connect-timeout = ${?REDIS_CONNECT_TIMEOUT_OAUTH2}
