--- a/sample/src/main/resources/application.conf
+++ b/sample/src/main/resources/application.conf
@@ -3,3 +3,4 @@ include classpath("session.conf")
 include classpath("oauth2.conf")
 include classpath("mysql.conf")
 include classpath("redis.conf")
+include classpath("mail.conf")
